# Melodink

./: .gitignore  LICENSE  README.md  flake.nix
client/: .gitignore  Makefile  README.md  analysis_options.yaml  build.yaml  ffigen.json  flutter_jank_metrics_01.json  pubspec.yaml  stderr
client/android/: .gitignore
client/android/app/: build.gradle  build.gradle.kts
client/android/app/cpp/: CMakeLists.txt
client/integration_test/: app_test.dart
client/integration_test/helpers/: async_wait.dart  get_screen_type.dart  wait_for_widget.dart
client/integration_test/tests/: all_tracks_list_tester.dart  player_tester.dart
client/ios/: .gitignore  Podfile
client/ios/LibMPV/: LibMPV.podspec  Makefile  download.sh
client/ios/MelodinkPlayer/: Makefile  MelodinkPlayer.podspec  download.sh
client/ios/Runner/: AppDelegate.swift  AudioPlayer.swift  Info.plist  Messages.g.swift
client/ios/Runner.xcodeproj/: project.pbxproj
client/lang/: en.i18n.yaml  fr.i18n.yaml
client/lib/: config.dart  injection_container.dart  main.dart  provider.dart  routes.dart
client/lib/core/: audio_controller.dart
client/linux/: CMakeLists.txt  messages.g.cc  messages.g.h  my_application.cc  player.cc
client/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
client/macos/: Podfile
client/macos/Flutter/: GeneratedPluginRegistrant.swift
client/macos/LibMPV/: LibMPV.podspec  download.sh
client/macos/MelodinkPlayer/: .gitignore  Makefile  MelodinkPlayer.podspec  download.sh
client/macos/Runner/: AppDelegate.swift  AudioPlayer.swift  DebugProfile.entitlements  Info.plist  MainFlutterWindow.swift  Messages.g.swift  messages.g.h  messages.g.m
client/macos/Runner.xcodeproj/: project.pbxproj
client/melodink_player/: .gitattributes  .gitignore  build.zig  build.zig.zon  cache.cc  client.h  deps.nix  fifo.cc  fs.cc  melodink_player.cpp  melodink_player.def  melodink_player.mm  miniaudio.c  player.cc  player.mm  pulseaudio.cc  sendevent.cc  sendevent.h  sendevent.mm  stream.cc  track.cc
client/melodink_player/src/: c.zig  cache.zig  deque.zig  fifo.zig  (+5 more)
client/pigeon/: native_communication.dart
client/test/: widget_test.dart
client/web/: index.html  manifest.json
client/windows/: CMakeLists.txt
nix/flutter/: default.nix
nix/minshell/: default.nix
proto/: playlist.proto  track.proto
server/: .air.toml  .gitignore  .golangci.yml  Makefile  go.mod  go.sum
server/internal/: container.go
(+581 files in other folders)
